Added more columns for 8 thermistors

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
     let comments = {};
 
     function insertHeaders() {
-        const headers = ['Timestamp', 'Thermistor 1', 'Thermistor 2', 'Thermistor 3', 'Thermistor 4', 'Thermocouple', 'Comment'];
+        const headers = ['Timestamp', 'Thermistor 1', 'Thermistor 2', 'Thermistor 3', 'Thermistor 4', 'Thermistor 5', 'Thermistor 6', 'Thermistor 7', 'Thermistor 8', 'Thermocouple', 'Comment'];
         let tableHeaders = document.getElementById("table-headers");
 
         let tr = document.createElement("tr");
